<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/welcome"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="25dp"
            android:text="@string/write_name"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="25dp"
            android:text="@string/start"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/answer_1_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_1"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="35dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/answer_2_1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/answer_2_2" />

                <RadioButton
                    android:id="@+id/good_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_3" />

            </RadioGroup>

        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/good_answer_3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/answer_3_1" />

            <CheckBox
                android:id="@+id/bad_answer_3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/answer_3_2" />

            <CheckBox
                android:id="@+id/good_answer_3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/answer_3_3" />

            <CheckBox
                android:id="@+id/bad_answer_3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/answer_3_4" />

            <CheckBox
                android:id="@+id/good_answer_3_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_5" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/good_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/answer_4_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_4_2" />
        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/good_answer_5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/answer_5_1" />

            <CheckBox
                android:id="@+id/bad_answer_5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/answer_5_2" />

            <CheckBox
                android:id="@+id/good_answer_5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/answer_5_3" />

            <CheckBox
                android:id="@+id/bad_answer_5_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_5_4" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_6" />

        <EditText
            android:id="@+id/answer_6_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_6"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_7" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/answer_7_1" />

            <RadioButton
                android:id="@+id/good_answer_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_7_2" />

        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_8" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/answer_8_1" />

            <RadioButton
                android:id="@+id/good_answer_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_8_2" />

        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_9" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/answer_9_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/answer_9_2" />

            <RadioButton
                android:id="@+id/good_answer_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_9_3" />

        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingTop="25dp"
            android:text="@string/question_10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="50dp">

                <CheckBox
                    android:id="@+id/good_answer_10_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_1" />

                <CheckBox
                    android:id="@+id/good_answer_10_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_2" />

                <CheckBox
                    android:id="@+id/good_answer_10_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/good_answer_10_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_4" />

                <CheckBox
                    android:id="@+id/good_answer_10_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_5" />

                <CheckBox
                    android:id="@+id/good_answer_10_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:text="@string/answer_10_6" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="submit"
            android:text="@string/submit_button"
            android:textAllCaps="true" />


        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/digital_marketing" />

    </LinearLayout>
</ScrollView>
